Chap/25/create_DB/26/Entity/27/migration/28/instance/29/Fixtures/30/queryBuilding

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -8,28 +8,13 @@
 
     <h1>Liste des articles</h1>
 
-    {# filtre date de base #}
-
-    <h3>{{ "now" | date("d/m/Y") }}</h3>
-
-    {# filtre créé avec /TWIG/AppExtension #}
-
-    <h3>{{ articles|longueur }}</h3>
-
-    {# fonction créé avec /TWIG/AppExtension #}
-    <h3>{{ calcul(5,5) }}</h3>
-
-    {# et la placer dans une variable #}
-
-    <h3>{% set result = calcul(3,5)  %}</h3>
-    <p>result = {{ result }}</p>
-
-    <ul>
+       <ul>
         {% for article in articles %}
-            <li><a href="{{ path('vue_article', { 'id':article['id'] }) }}">{{ article['nom'] }}</a></li>
+            <li><a href="{{ path('vue_article', { 'id':article.id }) }}">{{ article.titre }}</a>
+                <span>posté le {{ article.createdDate|date('d/m/Y') }}</span>
+            </li>
         {% endfor %}
     </ul>
 
-    <p>Temperature = {{ test }} °C</p>
 
 {% endblock %}
