--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,8 @@
     </head>
     <body class="container bg-dark text-light w-50 mt-5">
 
+        {% include 'menu/_menu.html.twig' %}
+
         {% block body %}{% endblock %}
 
         {#  GET JS BOOTSRAP 5.0.2 #}
