--- a/templates/menu/_menu.html.twig
+++ b/templates/menu/_menu.html.twig
@@ -9,6 +9,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ path('liste_articles') }}">Accueil</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ path('ajouter_article') }}">Ajouter</a>
+                </li>
             </ul>
         </div>
     </div>
