--- a/templates/default/vue.html.twig
+++ b/templates/default/vue.html.twig
@@ -19,4 +19,21 @@
         {%  endfor %}
     </div>
 
+    {{ form_start(form) }}
+    {{ form_errors(form)}}
+
+    {{ form_label(form.contenu, null, {'label_attr':{'class':'form-label'}}) }}
+    {{ form_widget(form.contenu, {'attr':{'class':'form-control'}}) }}
+
+    {{ form_label(form.author, null, {'label_attr':{'class':'form-label'}}) }}
+    {{ form_widget(form.author, {'attr':{'class':'form-control'}}) }}
+
+    <div class="form-check mt-2">
+        {{ form_widget(form.conditions, {'attr':{'class':'form-check-input'}}) }}
+        {{ form_label(form.conditions, null, {'label_attr':{'class':'form-check-label'}}) }}
+    </div>
+
+    {{ form_rest(form) }}
+        <button type submit class="btn btn-primary mt-2">valider</button>
+    {{ form_end(form) }}
 {% endblock %}
