--- a/templates/menu/_menu.html.twig
+++ b/templates/menu/_menu.html.twig
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{{ path('ajouter_article') }}">Ajouter</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ path('liste_categories') }}">Catégories</a>
+                </li>
             </ul>
         </div>
     </div>
