--- a/templates/default/vue.html.twig
+++ b/templates/default/vue.html.twig
@@ -18,6 +18,15 @@
             </div>
         {%  endfor %}
     </div>
+    
+    {% for label, messages in app.flashes(['warning', 'error']) %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
 
     {{ form_start(form) }}
     {{ form_errors(form)}}
