--- a/templates/default/vue.html.twig
+++ b/templates/default/vue.html.twig
@@ -12,19 +12,17 @@
     <div class="row">
         <h6>Voici les Commentaires</h6>
         {%  for comment in article.comments %}
-            <div class="col-md-12 border mb-2">
+            <div class="col-md-12 border mb-2 rounded">
                 <small>Le {{ comment.dateComment | date("d/m/Y") }} par {{ comment.author }}</small>
                 <p>{{ comment.contenu }}</p>
             </div>
         {%  endfor %}
     </div>
     
-    {% for label, messages in app.flashes(['warning', 'error']) %}
-        {% for message in messages %}
-            <div class="alert alert-{{ label }}">
-                {{ message }}
-            </div>
-        {% endfor %}
+   {% for message in app.flashes('notice') %}
+    <div class="flash-notice alert alert-danger">
+        {{ message }}
+    </div>
     {% endfor %}
 
 
