--- a/templates/default/ajouter.html.twig
+++ b/templates/default/ajouter.html.twig
@@ -24,7 +24,12 @@
                     {{ form_label(form.categories, null, {'label_attr': {'class':'form-label'}}) }}
                     {{ form_widget(form.categories, {'attr': {'class':'form-control'}}) }}
             </div>
+
+            {{ form_widget(form.draft, { 'attr' : { 'class' : 'btn btn-info'}} )}}
+            {{ form_widget(form.publish, { 'attr' : { 'class' : 'btn btn-success'}} )}}
+
         {{ form_rest(form)}}
-        <button type="submit" class="btn btn-primary">Valider</button>
+
     {{ form_end(form)}}
+
 {% endblock %}
