Chap/43/add command/goal is update the articles in DB from -to publish- state to -publish- state

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,7 +4,15 @@
 
 {% block body %}
 
-    <h1>Liste des articles</h1>
+    
+    <h3>
+        Liste des {% count(articles) %} articles
+        {% if draft %}
+            en mode brouillon
+        {% else %}
+            publiés
+        {% endif %}
+    </h3>
 
        <ul>
         {% for article in articles %}
