--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -3,18 +3,18 @@
 {% block title %}Liste des articles{% endblock %}
 
 {% block body %}
-
     
-    <h3>
-        Liste des {% count(articles) %} articles
+    <p class="mt-3">
+        Liste des {{ articles | length }}  articles
         {% if draft %}
             en mode brouillon
         {% else %}
             publiés
         {% endif %}
-    </h3>
+    </p>
 
        <ul>
+
         {% for article in articles %}
             <li><a href="{{ path('vue_article', { 'id':article.id }) }}">{{ article.titre }}</a>
                 <span>posté le {{ article.createdDate|date('d/m/Y') }}</span>
