--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
 
 
     </head>
-    <body class="container bg-dark text-light w-50 mt-5">
+    <body class="container w-50 bg-dark text-light mt-5">
 
         {% include 'menu/_menu.html.twig' %}
 
