--- a/templates/menu/_menu.html.twig
+++ b/templates/menu/_menu.html.twig
@@ -9,15 +9,29 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ path('liste_articles') }}">Accueil</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{{ path('ajouter_article') }}">Ajouter</a>
-                </li>
+
+                {% if is_granted('ROLE_ADMIN')%}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ path('ajouter_article') }}">Ajouter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ path('liste_draft') }}">Brouillons</a>
+                    </li>
+                {% endif %}
+
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{{ path('liste_categories') }}">Catégories</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{{ path('liste_draft') }}">Brouillons</a>
-                </li>
+                
+                {% if is_granted('IS_AUTHENTICATED_FULLY')%}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ path('app_logout') }}">deconnexion</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ path('app_login') }}">Connexion</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
